--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "onfonsms",
-  "version": "1.0.6",
-  "description": "onfon sms",
+  "name": "trueafricansms",
+  "version": "1.0.0",
+  "description": "trueafrican sms",
   "main": "index.js",
   "scripts": {
     "test": "node --trace-warnings  ./test/index.js"
   },
   "keywords": [
     "npm",
-    "onfon",
-    "onfonsms",
-    "onfon",
+    "trueafrican",
+    "trueafricansms",
+    "true african",
     "sms",
-    "onfon-sms"
+    "trueafrican-sms"
   ],
   "author": "Somsubhra Saha",
   "license": "ISC",
@@ -23,6 +23,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/onlysomsubhra/onfonsms"
+    "url": "git+https://github.com/onlysomsubhra/trueafricansms"
   }
 }
